had to fix the text in the about section because it was getting cut off on mobile.

--- a/src/components/PageIndices/AboutPage/AboutPage.module.scss
+++ b/src/components/PageIndices/AboutPage/AboutPage.module.scss
@@ -54,7 +54,7 @@
     grid-area: about;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     & p {
       text-indent: 4vh;
 
